--- a/AdventOfCode.cabal
+++ b/AdventOfCode.cabal
@@ -19,7 +19,7 @@ description:         Please see the README on Github at <https://github.com/t-ba
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib
+  exposed-modules:     Day1
   build-depends:       base >= 4.7 && < 5
   default-language:    Haskell2010
 
@@ -36,6 +36,7 @@ test-suite AdventOfCode-test
   hs-source-dirs:      test
   main-is:             Spec.hs
   build-depends:       base
+                     , hspec
                      , AdventOfCode
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
