--- a/AdventOfCode.cabal
+++ b/AdventOfCode.cabal
@@ -20,6 +20,7 @@ description:         Please see the README on Github at <https://github.com/t-ba
 library
   hs-source-dirs:      src
   exposed-modules:     Day1
+                     , Day2
   build-depends:       base >= 4.7 && < 5
   default-language:    Haskell2010
 
