--- a/AdventOfCode.cabal
+++ b/AdventOfCode.cabal
@@ -23,6 +23,7 @@ library
                      , Day2
                      , Day3
   build-depends:       base >= 4.7 && < 5
+                     , containers
   default-language:    Haskell2010
 
 executable AdventOfCode-exe
