--- a/AdventOfCode.cabal
+++ b/AdventOfCode.cabal
@@ -22,6 +22,7 @@ library
   exposed-modules:     Day1
                      , Day2
                      , Day3
+                     , Day4
   build-depends:       base >= 4.7 && < 5
                      , containers
   default-language:    Haskell2010
