Day5: solve first challenge

--- a/AdventOfCode.cabal
+++ b/AdventOfCode.cabal
@@ -23,8 +23,10 @@ library
                      , Day2
                      , Day3
                      , Day4
+                     , Day5
   build-depends:       base >= 4.7 && < 5
                      , containers
+                     , lens
   default-language:    Haskell2010
 
 executable AdventOfCode-exe
